Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110751

QTextEdit: textBackgroundColor() returns wrong color if no color is set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.5.0, 6.6.0
    • 6.4.0, 6.4.1, 6.4.2
    • GUI: Text handling
    • None
    • Qt Creator 9.0.1 Community
    • Windows
    • 9086bc7fd (dev), 385196438 (6.5)

      If I have a white QTextEdit and then call textBackgroundColor I get black if the text has no background color. But logically I expect white. Once the background is set, everything works as expected. I tested it on Windows with Qt Designer C++ and PySide6. The attached example should show my problem well.

        For Gerrit Dashboard: QTBUG-110751
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            firecube Ben Fässler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes