Return transparent background color if no brush is set

Fixes: QTBUG-110751
Pick-to: 6.5
Change-Id: I6fa33ba22b0209da6c9e1022851f84c892a5ae5f
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>